sources += files(
    'configs/Constants.vala',
        
    'controllers/AppController.vala',
    
    'views/AppView.vala',
    'views/WelcomeView.vala',
    'views/GitignoreView.vala',

    'widgets/HeaderBar.vala',
    'widgets/Tag.vala',
    'widgets/Button.vala',
    'widgets/DataSet.vala',
    'widgets/SearchEntry.vala',
    'widgets/EntryCompletion.vala',
    'widgets/SourceView.vala',

    'utils/FileUtils.vala',
    'utils/DataUtils.vala',
    
    'Application.vala',
    'Main.vala',
    'Window.vala'
)
