sources += files(
    'configs/Constants.vala',
        
    'controllers/AppController.vala',

    'services/Database.vala',
    'models/Bookmark.vala',
    
    'views/AppView.vala',
    'views/WelcomeView.vala',
    'views/GitignoreView.vala',

    'widgets/HeaderBar.vala',
    'widgets/Tag.vala',
    'widgets/Button.vala',
    'widgets/SearchEntry.vala',
    'widgets/EntryCompletion.vala',
    'widgets/SourceView.vala',
    'widgets/BookmarkDialog.vala',

    'utils/FileUtils.vala',
    'utils/DataUtils.vala',
    'utils/Utils.vala',
    
    'Application.vala',
    'Main.vala',
    'Window.vala'
)
